archived-reference/3.0/Microsoft.PowerShell.Core/Invoke-History.md
---
external help file: System.Management.Automation.dll-Help.xml
Locale: en-US
Module Name: Microsoft.PowerShell.Core
ms.date: 06/09/2017
online version: https://learn.microsoft.com/previous-versions/powershell/module/microsoft.powershell.core/invoke-history?view=powershell-3.0&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Invoke-History
---
# Invoke-History

## SYNOPSIS

Runs commands from the session history.

## SYNTAX

```
Invoke-History [[-Id] <String>] [-WhatIf] [-Confirm] [<CommonParameters>]
```

## DESCRIPTION

The **Invoke-History** cmdlet runs commands from the session history.
You can pass objects representing the commands from **Get-History** to **Invoke-History**, or you can identify commands in the current history by using their ID number.
To find the identification number of a command, use the Get-History cmdlet.

## EXAMPLES

### Example 1

```
PS> Invoke-History
```

This command runs the last (most recent) command in the session history.
You can abbreviate this command as "r" (think "repeat" or "rerun"), the alias for **Invoke-History**.

### Example 2

```
PS> Invoke-History -Id 132
```

This command runs the command in the session history with ID 132.
Because the name of the **Id** parameter is optional, you can abbreviate this command as "`Invoke-History 132", "ihy 132", or "r 132`".

### Example 3

```
PS> Invoke-History get-pr
```

This command runs the most recent **Get-Process** command in the session history.
When you type characters for the **Id** parameter, **Invoke-History** runs the first command that it finds that matches the pattern, beginning with the most recent commands.
This command uses the **Id** parameter, but it omits the optional parameter name.

### Example 4

```
PS> 16..24 | ForEach {Invoke-History -Id $_ }
```

This command runs commands 16 through 24.
Because you can list only one ID value, the command uses the ForEach-Object cmdlet to run the **Invoke-History** command once for each ID value.

### Example 5

```
PS> Get-History -Id 255 -Count 7 | ForEach {Invoke-History -Id $_.Id}
```

This command runs the 7 commands in the history that end with command 255 (typically 249 through 255).
It uses the Get-History cmdlet to retrieve the commands.
Because you can list only one ID value, the command uses the ForEach-Object cmdlet to run the **Invoke-History** command once for each ID value.

## PARAMETERS

### -Id

Identifies a command in the history.
You can type the ID number of the command or the first few characters of the command.

If you type characters, **Invoke-History** matches the most recent commands first.
If you omit this parameter, **Invoke-History** runs the last (most recent) command.
The parameter name ("id") is optional.
To find the ID number of a command, use the Get-History cmdlet.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -Confirm

Prompts you for confirmation before running the cmdlet.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -WhatIf

Shows what would happen if the cmdlet runs.
The cmdlet is not run.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](./About/about_CommonParameters.md).

## INPUTS

### System.String

You can pipe a history ID to Invoke-History.

## OUTPUTS

### None

**Invoke-Histor**y does not generate any output, but output might be generated by the commands that **Invoke-History** runs.

## NOTES

* The session history is a list of the commands entered during the session along with the ID. The session history represents the order of execution, the status, and the start and end times of the command. As you enter each command, PowerShell adds it to the history so that you can reuse it.
  For more information about the session history, see [about_History](About/about_History.md).

* You can also refer to `Invoke-History` by its built-in aliases, `r` and `ihy`.
  For more information, see [about_Aliases](About/about_Aliases.md).

## RELATED LINKS

[Add-History](Add-History.md)

[Clear-History](Clear-History.md)

[Get-History](Get-History.md)

[about_History](About/about_History.md)
